--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <script type="module" src="/src/main.js"></script>
     <div class="tolerance_form">
       <div>
+        <label for="">Search</label>
+        <input type="text" id="search" />
+      </div>
+      <div>
         <label for="">Tolerance</label>
         <input type="number" id="tolerance_input" />
       </div>
